test/compile_errors/err_if_expr_missing_else_multiline_binding.w
//! expect-check-fail: if expression requires an else branch unless the then branch diverges

fn main:
    let _x =
        if true: 5
